simplified and fixed scripts and units

--- a/systemd-units/mcserv-stop.service
+++ b/systemd-units/mcserv-stop.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Stop Minecraft Server
+Conflicts=mcserv.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemctl stop mcserv.service
+ExecStart=/usr/bin/echo "Stopping mcserv.service"
