improved directory layout and fixed few bugs

--- a/systemd-units/default/mcserv.service
+++ b/systemd-units/default/mcserv.service
@@ -7,7 +7,7 @@ OnFailure=mcserv.socket
 
 [Service]
 WorkingDirectory=/opt/mcserv
-ExecStart=/opt/mcserv/scripts/start.sh
+ExecStart=/usr/bin/mcserv-start
 
 [Install]
 WantedBy=mutli-user.target
