ensured that timerctrl starts after mcserv.service

--- a/systemd-units/mcserv-stoptimerctrl.service
+++ b/systemd-units/mcserv-stoptimerctrl.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Monitors if Minecraft Server has not players, to then start mcserv-stop.timer
 BindsTo=mcserv.service
+After=mcserv.service
 
 [Service]
 ExecStart=/usr/bin/mcserv-shutdown-timerctrl
