ensured that stoptimerctrl and timer are stopped when running

--- a/systemd-units/mcserv-stop.service
+++ b/systemd-units/mcserv-stop.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Stop Minecraft Server
-Conflicts=mcserv.service
+Conflicts=mcserv.service mcserv-stoptimerctrl.service mcserv-stop.timer
 
 [Service]
 Type=oneshot
