added docker.service requirement

--- a/systemd-units/docker/mcserv.service
+++ b/systemd-units/docker/mcserv.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Minecraft Server
-After=network-online.target
+After=network-online.target docker.service
+Requires=docker.service
 
 Wants=mcserv-stoptimerctrl.service
 OnFailure=mcserv.socket
