--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
     hamachi:
+        container_name: mcserv_hamachi
         image: "gfjardim/hamachi"
         network_mode: "host"
         privileged: true        
@@ -11,8 +12,11 @@ services:
             - /etc/localtime:/etc/localtime:ro
 
     minecraft_server:
+        container_name: mcserv_server
         build: .
-        network_mode: "host"
+        ports:
+            - "25565:25565/tcp"
+            - "25565:25565/udp"
         volumes:
             - /opt/mcserv:/opt/mcserv
             - /sys/fs/cgroup:/sys/fs/cgroup:ro
