--- a/systemd-units/mcserv.service
+++ b/systemd-units/mcserv.service
@@ -8,6 +8,7 @@ OnFailure=mcserv.socket
 [Service]
 WorkingDirectory=/opt/mcserv
 ExecStart=/usr/local/bin/mcserv-start.sh
+ExecStopPost=systemctl start mcserv.socket
 
 [Install]
 WantedBy=mutli-user.target
