--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         ports:
             - "25565:25565/tcp"
             - "25565:25565/udp"
+            - "8000:8000/tcp"
         volumes:
             - /opt/mcserv:/opt/mcserv
             - /sys/fs/cgroup:/sys/fs/cgroup:ro
