--- a/systemd-units/mcserv-stoptimerctrl.service
+++ b/systemd-units/mcserv-stoptimerctrl.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Monitors if Minecraft Server has no players, to then start mcserv-stop.timer
+Description=Service to close mcserv if no players are online
 BindsTo=mcserv.service
 After=mcserv.service
 
