hopefully better error handling

--- a/systemd-units/mcserv.service
+++ b/systemd-units/mcserv.service
@@ -8,7 +8,11 @@ OnFailure=mcserv.socket
 
 [Service]
 WorkingDirectory=/opt/mcserv
+SuccessExitStatus=143
+Restart=on-failure
+
 ExecStart=/usr/local/bin/mcserv-start.sh
+ExecStopPost=/usr/bin/systemctl start mcserv.socket
 
 [Install]
 WantedBy=mutli-user.target
