--- a/systemd-units/mcserv.service
+++ b/systemd-units/mcserv.service
@@ -3,6 +3,7 @@ Description=Minecraft Server
 After=network-online.target
 Wants=mcserv-stoptimerctrl.service
 Conflicts=mcserv.socket
+
 OnFailure=mcserv.socket
 
 [Service]
@@ -10,9 +11,7 @@ WorkingDirectory=/opt/mcserv
 SuccessExitStatus=143
 Restart=on-failure
 
-ExecStartPre=/usr/bin/mkfifo %t/mcserv.stdin
-ExecStart=/bin/bash -c "exec /usr/local/bin/mcserv-start.sh < %t/mcserv.stdin"
-ExecStopPost=/usr/bin/rm %t/mcserv.stdin
+ExecStart=/usr/local/bin/mcserv-start.sh
 ExecStopPost=/usr/bin/systemctl start mcserv.socket
 
 [Install]
