--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
     hamachi:
-        image: "gfjardim/hamachi"
+        image: gfjardim/hamachi
         privileged: true        
         environment:
             - ACCOUNT=your@email.com
@@ -12,9 +12,9 @@ services:
     minecraft_server:
         build: .
         ports:
-            - "25565:25565/tcp"
-            - "25565:25565/udp"
-            - "8000:8000/tcp"
+            - 25565:25565/tcp
+            - 25565:25565/udp
+            - 8000:8000/tcp
         environment:
             - MINECRAFT_UID=1000
             - MINECRAFT_GID=1000
