added ftp server for easy mod installation

--- a/systemd-units/setup.service
+++ b/systemd-units/setup.service
@@ -3,7 +3,7 @@ Description=setup container from environment
 
 [Service]
 Type=oneshot
-PassEnvironment=MINECRAFT_UID MINECRAFT_GID MINECRAFT_TIMEOUT
+PassEnvironment=MINECRAFT_UID MINECRAFT_GID MINECRAFT_PASSWORD MINECRAFT_TIMEOUT
 ExecStart=/usr/local/bin/setup.sh
 
 [Install]
