--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,11 @@ services:
             - 25565:25565/tcp
             - 25565:25565/udp
             - 8000:8000/tcp
+            - 8021:21/tcp
         environment:
             - MINECRAFT_UID=1000
             - MINECRAFT_GID=1000
+            - MINECRAFT_PASSWORD=minecraft
             - MINECRAFT_SERVER_JAR=paper.jar
             - MINECRAFT_JVM_ARGS=${MINECRAFT_JVM_ARGS}
         volumes:
