- generalized additional packages - completed vrising example to shut down correctly - added kill_mode parameter - cleaned up container-setup - fixed some minor bugs - added new features to readme

--- a/systemd-units/container-setup.service
+++ b/systemd-units/container-setup.service
@@ -3,7 +3,7 @@ Description=setup container from environment
 
 [Service]
 Type=oneshot
-PassEnvironment=DDSERV_UID DDSERV_GID DDSERV_PASSWORD DDSERV_TIMEOUT DDSERV_ACTIVATE_PORT DDSERV_STEAM_APP_ID DDSERV_STEAM_FORCE_PLATFORM
+PassEnvironment=DDSERV_UID DDSERV_GID DDSERV_PASSWORD DDSERV_TIMEOUT DDSERV_ACTIVATE_PORT DDSERV_STEAM_APP_ID DDSERV_STEAM_FORCE_PLATFORM DDSERV_COCKPIT_PORT DDSERV_FTP_PORT DDSERV_EXIT_SUCCESS_CODE DDSERV_KILL_MODE
 ExecStart=/usr/local/bin/container-setup
 
 [Install]
