--- a/example.vrising/docker-compose.vrising.yml
+++ b/example.vrising/docker-compose.vrising.yml
@@ -10,22 +10,29 @@ services:
     #        - /etc/localtime:/etc/localtime:ro
 
     vrising_server:
-        build: ..
+        build:
+            context: ..
+            args:
+                - PADDITIONAL_PACKAGES=wine64 xvfb
         ports:
             - 9876:9876/udp
             - 9877:9877/udp
-            - 8000:8000/tcp
+            - 9090:9090/tcp
             - 8021:21/tcp
         environment:
             - DDSERV_UID=1000
             - DDSERV_GID=1000
-            - DDSERV_ACTIVATE_PORT=9876/udp
             - DDSERV_PASSWORD=test
-            - DDSERV_TIMEOUT=15min
+            
             - DDSERV_STEAM_APP_ID=1829350
             - DDSERV_STEAM_FORCE_PLATFORM=windows
+
+            - DDSERV_ACTIVATE_PORT=9876/udp
             - DDSERV_JOIN_PATTERN=User .+? connected as ID
             - DDSERV_LEAVE_PATTERN=User .+? disconnected
+
+            - DDSERV_EXIT_SUCCESS_CODE=143
+            - DDSERV_KILL_MODE=mixed
         volumes:
             - ./test:/opt/dedicated-server
             - /sys/fs/cgroup:/sys/fs/cgroup:ro
